Split card definition assets by type

--- a/Assets/NoName/Unity/NoName.Unity.asmdef
+++ b/Assets/NoName/Unity/NoName.Unity.asmdef
@@ -2,7 +2,8 @@
   "name": "NoName.Unity",
   "references": [
     "NoName.Core",
-    "NoName.Game"
+    "NoName.Game",
+    "Unity.InputSystem"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
